# future-debrief

./: .dockerignore  .gitattributes  .gitignore  .npmrc  AIR_GAPPED_TYPES_DISTRIBUTION.md  CHANGELOG.md  CLAUDE.md  Dockerfile  MapComponent_Refactoring_Critical_Review.md  Memory_Bank.md  README.md  TYPE_SAFETY_SUMMARY.md  debrief-demo.code-workspace  fly-template.toml  fly.toml  future-debrief.code-workspace  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/tools-mcp/: .gitignore  CLAUDE.md  Makefile  README.md  build_pyz.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_server.py
apps/tools-mcp/src/tools_mcp/: __init__.py  __main__.py  server.py
libs/shared-types/: .gitignore  CLAUDE.md  JSON_SCHEMA_DOCS_COMPLETION.md  Makefile  PYTHON_DISTRIBUTION.md  README.md  add_base_imports.js  add_schema_alias.py  check_schema_refs.py  copy_python_models.py  create-docs-index.py  eslint.config.js  fix_generated_imports.py  fix_imports.py  fix_type_refs.js  fix_types.js  generate_from_pydantic.py  generate_schemas.py  package-lock.json  package.json  post_process_schemas.py  post_process_typescript.js  pyproject.toml  pyrightconfig.json  requirements.txt  research-findings-issue-109.md  setup.py  test-schema.json  tsconfig.json
libs/shared-types/docs/: PYDANTIC_MIGRATION_PLAN.md  shared-types-SRD.md
libs/shared-types/examples/: annotation-sample.json  featurecollection-sample.json  point-sample.json  track-sample.json
libs/shared-types/examples/python/: maritime_features.py
libs/shared-types/examples/typescript/: maritime-features.ts  state-management.ts
libs/shared-types/pydantic_models/: __init__.py
libs/shared-types/pydantic_models/features/: __init__.py  feature_collection.py
libs/shared-types/pydantic_models/tools/: __init__.py  constrained_feature.py  global_tool_index.py  tool.py  tool_call_response.py  tool_metadata.py  tool_stats.py
libs/shared-types/python-src/debrief/: __init__.py
libs/shared-types/schema/: annotation.schema.json  featurecollection.schema.json  point.schema.json  track.schema.json
libs/shared-types/schemas/: EditorState.json  TimeState.json
libs/shared-types/schemas-backup/features/: Annotation.schema.json
libs/shared-types/schemas-backup/states/: SelectionState.schema.json  TimeState.schema.json
libs/shared-types/schemas-backup/tools/: ConstrainedFeature.schema.json  ToolListResponse.schema.json
libs/shared-types/schemas/features/: Annotation.schema.json  FeatureCollection.schema.json  Point.schema.json  Track.schema.json
libs/shared-types/schemas/states/: CurrentState.schema.json  EditorState.schema.json  TimeState.schema.json  ViewportState.schema.json
libs/shared-types/schemas/tools/: Input.schema.json  JSONSchema.schema.json  MCPTool.schema.json  MCPToolCallRequest.schema.json  MCPToolCallResponse.schema.json  MCPToolListResponse.schema.json  Output.schema.json  README.md  Tool.schema.json  ToolCallRequest.schema.json  ToolCallResponse.schema.json
libs/shared-types/scripts/: validate.js  verify-wheel.js
libs/shared-types/src/: index.ts
libs/shared-types/src/validators/: annotation-validator.ts  featurecollection-validator.ts  index.ts  point-validator.ts  track-validator.ts
libs/shared-types/src/zod/: index.ts
libs/shared-types/templates/: featurecollection.ts.txt
libs/shared-types/tests/: test_wheel_installation.py
libs/shared-types/tests/json/: test-schemas.js
libs/shared-types/tests/python/: test_generated_files.py  test_validators.py
libs/tool-vault-packager/: .dockerignore  .gitignore  CLAUDE.md  DEVELOPERS.md  Dockerfile  FASTMCP_FINAL.md  FASTMCP_HYBRID_SUCCESS.md  FASTMCP_TRIAL.md  Makefile  README.md  TROUBLESHOOTING.md  __init__.py  base_tool.py  cli.py  debrief_api.py  discovery.py  fly-production.toml  fly-template.toml  issue-74-updated.md  mypy.ini  package-lock.json  package.json  packager.py  playwright.config.ts  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  server_fastmcp.py  server_fastmcp_dev.py  server_fastmcp_hybrid.py  server_fastmcp_simple.py  setup.py  shared-types  test-runner.js  test-tools.sh  test_hybrid_server.sh  validation.py
libs/tool-vault-packager/.claude/: settings.local.json
libs/tool-vault-packager/CI/: README.md
libs/tool-vault-packager/docs/: pydantic-migration-phase1-analysis.md  toolvault_packager_plan.md  toolvault_spa_srd.md  toolvault_srd.md
libs/tool-vault-packager/scripts/: validate.js
libs/tool-vault-packager/spa/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
libs/tool-vault-packager/spa/src/: App.css  (+1 more)
libs/tool-vault-packager/testing/: __init__.py  cli.py  test_runner.py  tool_tester.py
libs/tool-vault-packager/tools/: __init__.py  toggle_first_feature_color.py  word_count.py
(+765 files in other folders)
