[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tools-mcp"
version = "1.0.0"
description = "Pure FastMCP server for maritime analysis tools"
authors = [{name = "Future Debrief Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.5.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "mcp-inspector>=0.1.0",
]

[project.scripts]
tools-mcp = "tools_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
disallow_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true
warn_unused_configs = true
exclude = [
    "dist/",
    "__pycache__/",
    ".pytest_cache/",
]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    "dist/",
    "__pycache__/",
    ".pytest_cache/",
    ".git",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["tools_mcp"]
