[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "debrief-types"
dynamic = ["version"]
description = "Shared types and validators for Debrief maritime analysis platform"
readme = "README.md"
authors = [{name = "Debrief Team", email = "support@debrief.org"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords = [
    "geojson", "maritime", "debrief", "shared-types", 
    "validation", "json-schema", "types", "validators"
]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/debrief/future-debrief"
Documentation = "https://github.com/debrief/future-debrief/tree/main/libs/shared-types"
Repository = "https://github.com/debrief/future-debrief.git"
"Bug Tracker" = "https://github.com/debrief/future-debrief/issues"

[tool.setuptools]
package-dir = {"" = "python-src"}
packages = ["debrief", "debrief.types", "debrief.validators", "debrief.schemas"]
include-package-data = true

[tool.setuptools.package-data]
"debrief.schemas" = ["*.json"]

[tool.setuptools.dynamic]
version = {attr = "debrief.__version__"}